--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,16 +1,6 @@
+
 {
-    "routes" : [
-        {
-            "src" : "/",
-            "dest" : "/"
-        },
-        {
-            "src" : "/login",
-            "dest":"/"
-        },
-        {
-            "src": "/dashboard",
-            "dest": "/"
-        }
-    ]
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
